# PatternsExample

./: README.md
Adapter/: CMakeLists.txt  main.cpp
Adapter/data/: output_text.json
FactoryMethod2/: CMakeLists.txt  main.cpp
FactoryMethod2/buttons/: IButton.cpp  IButton.h  TextButton.cpp  TextButton.h  WebButton.cpp  WebButton.h
FactoryMethod2/windows/: Dialog.cpp  Dialog.h  TextDialog.cpp  TextDialog.h  WebDialog.cpp  WebDialog.h
Prototype/: CMakeLists.txt  FerrariPrototype.cpp  FerrariPrototype.h  PirelliFerrari.cpp  PirelliFerrari.h  Prototype.h  main.cpp
